# Ember-Engine

./: .gitignore  CMakeLists.txt  README.md
include/: Entity.hpp  Input.hpp  MovementSystem.hpp
include/components/: PositionComponent.hpp  VelocityComponent.hpp
include/physics/: CollisionComponent.hpp  CollisionSystem.hpp  PhysicsComponent.hpp  PhysicsSystem.hpp
src/: EntityManager.cpp  MovementSystem.cpp  main.cpp
src/core/: EntityManager.cpp  Input.cpp
src/physics/: CollisionSystem.cpp  PhysicsSystem.cpp
